# scJDO

./: .gitignore  .readthedocs.yaml  API.md  CHANGELOG.md  CHANGELOG_VELOCITY.md  DELIVERY_SUMMARY.md  HybridGRN_Extension.md  IMPLEMENTATION_SUMMARY.md  INTEROPERABILITY.md  LICENSE  MANIFEST.txt  MATH.md  PR_DESCRIPTION.md  PR_DESCRIPTION_FOURIER_TUTORIAL.md  QUICKSTART.md  QUICKSTART_VELOCITY.md  README.md  README_FINAL.md  README_fourier_extension.md  RNA_VELOCITY_GUIDE.md  SCOPATLAS_DESIGN.md  SCOPATLAS_QUICKSTART.md  SCOPATLAS_README.md  UPDATE_CHANGES.md  math_overview.md  patch_apply_instructions.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
Figures_notebook/: 08_embedding_benchmark.ipynb  09_fa_benchmark.ipynb  09_fa_pca_scvi_benchmark.ipynb  Figure1.ipynb  Figure1_scIDiff_Notebook.ipynb  Figure2.ipynb  Figure2_Generate.ipynb  Figure2_synthetic_peak_timing_null_analysis.ipynb  Figure3.ipynb  Figure4.ipynb  Figure4_Generation_Simple.ipynb  Figure5_Simple.ipynb  Figure6_01_multiome_drift_cellcycle_regressed_FA.ipynb  Figure6_02_multiome_FA_integration.ipynb  Figure6_User_Friendly.ipynb  Figure7_Simple.ipynb  Synthetic_benchmark.ipynb  Synthetic_pseudotime_embedding_benchmark.ipynb  build_branch_specificity_notebook.py  build_cc_regressed_notebook.py  build_scp295_h5ad.py  build_synthetic_benchmark_notebook.py  figure3_simplified.ipynb  run_all.sh
Manuscript/: adaptive_kernel_windowing.ipynb  biological_ordering_agreement.ipynb  biological_ordering_agreement_metrics.json  branch_summary.csv  build_adaptive_kernel_notebook.py  concordance_01_scjdo.ipynb  concordance_02_splicejac.ipynb  concordance_03_dynamo.ipynb  concordance_README.md  concordance_metrics.json  concordance_splicejac_dynamo.ipynb  figure_2_updated.ipynb  figure_2_updated_metrics.json  figure_4_updated.ipynb  figure_5_updated.ipynb  figure_6_rna_atac_operator_concordance.ipynb  instability_genes_IPS.csv  instability_genes_IPS_late.csv  instability_genes_MET.csv  instability_genes_Stromal.csv  methods_snippet_autocorrelation.txt  multiome_autocorrelation_correction.ipynb  multiome_correlation_corrected.csv  regulators_IPS.csv  regulators_IPS_late.csv  regulators_MET.csv  regulators_Stromal.csv  revision_v24_to_v25_tier2.md  run_all.sh
Manuscript/concordance_results/: dynamo_per_cluster.npz  scjdo_per_cluster.npz  shared_metadata.json  splicejac_per_cluster.npz
Manuscript/rna_atac_concordance_results/: concordance_results.json  precommitment.json  reporting_paragraph.txt
configs/: fourier_default.yaml
docs/: FOURIER_TUTORIAL_README.md  Makefile  citation.md  conf.py  index.md  installation.md  mathematical-background.md  release-notes.md  requirements.txt  usage-principles.md
docs/_static/: custom.css
docs/api/: index.md  plotting.md  tools.md
docs/how-to/: custom-data.md  index.md
docs/tutorials/: bridge.md  drift.md  index.md
examples/: 01_paul15_hybrid_drift_tutorial.ipynb  02_paul15_fourier_tutorial.ipynb  03_schrodinger_bridge_tutorial.ipynb  04_paul15_schrodinger_tutorial.ipynb  05_scopatlas_complete_workflow.ipynb  06_paul15_scvi_palantir_branches.ipynb  07_paul15_scvi_palantir_branches.ipynb  08_embedding_benchmark.ipynb  08_embedding_benchmark_test.ipynb  09_fa_benchmark.ipynb  09_fa_pca_scvi_benchmark.ipynb  NOTEBOOKS_SUMMARY.md  NOTEBOOK_README.md  PAUL15_NOTEBOOK_README.md  PAUL15_QUICKSTART.md  Palantir_sample_notebook.ipynb  Palantir_sample_notebook_FA.ipynb  Palantir_sample_notebook_driftfield_PCA.ipynb  Palantir_sample_notebook_driftfield_ldvae.ipynb  README.md  paul15_hybrid_drift_analysis.ipynb  paul15_hybrid_drift_analysis.ipynb.backup  schrodinger_bridge_synthetic_analysis.ipynb  schrodinger_bridge_tutorial.ipynb  scopatlas_complete_workflow.ipynb  test_notebook.py  test_paul15.py  train_aging_bridge.py  train_with_velocity.py  tutorial_paul15_hematopoiesis-Copy2.ipynb  tutorial_paul15_hematopoiesis.ipynb  tutorial_scopatlas.py  tutorial_synthetic_data.ipynb
notebooks/: 06_fourier_domain_diffusion.ipynb  tutorial_paul15_hematopoiesis_fourier.ipynb
scIDiff/Fourier/: kspace_samplers.py  transforms.py
scIDiff/models/: fourier_score_network.py
scIDiff/training/: fourier_trainer.py
scIDiff/transport/: spectral_bridge.py
scjdo/: __init__.py
scjdo/analysis/: grn_scores.py
scjdo/archetypes/: decompose.py  windowing.py
scjdo/atlas/: __init__.py  atlas_builder.py  build_atlas_cli.py  operator_embedding.py
scjdo/cli/: main.py
scjdo/fourier/: __init__.py  features.py  losses_spectral.py  transforms.py
scjdo/grn/: __init__.py  archetypes.py  perturb.py  priors.py  pullback.py  refine.py
scjdo/io/: anndata.py  anndata_hybrid.py
scjdo/models/: __init__.py  fourier_score_network.py  hybrid_grn.py  representation.py  schrodinger_bridge.py  scjdo_comm.py
scjdo/pipeline/: train_bridge.py  train_from_anndata.py  train_hybrid_grn.py
scjdo/pl/: __init__.py  _bridge.py  _drift.py  _regulators.py
scjdo/pp/: _trajectory.py
scjdo/tl/: __init__.py  _bridge.py  _drift.py  _regulators.py
scjdo/validation/: __init__.py  identifiability.py  null_models.py  robustness.py
scqdiff/: __init__.py  losses.py
scqdiff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scqdiff/Fourier/: __init__.py
scqdiff/analysis/: grn_scores.py
scqdiff/atlas/: __init__.py  atlas_builder.py  build_atlas_cli.py  clustering.py  operator_metrics.py  regime_classifier.py  visualization.py
scqdiff/cli/: __init__.py  main.py
scqdiff/comm/: scqdiff_comm.py
scqdiff/fourier/: __init__.py  bands.py  kspace_samplers.py  sample.py  transforms.py
scqdiff/grn/: __init__.py  archetypes.py  perturb.py  priors.py  pullback.py  refine.py
scqdiff/io/: anndata.py  anndata_hybrid.py
scqdiff/models/: __init__.py  (+4 more)
tests/: conftest.py  test_branch_api.py  test_corrections.py  test_hybrid_grn.py  test_imports_smoke.py  test_models_smoke.py  test_scopatlas.py  test_training_smoke.py  test_transport_sinkhorn_smoke.py  test_validation.py  test_windowing_regression.py  validate_hybrid_grn_synthetic.py  validate_structure.py
(+89 files in other folders)
