[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ── Project metadata ──────────────────────────────────────────────────────────
[project]
name = "scjdo"
version = "0.3.0"
description = "scJDO (single-cell Jacobian drift operators): Schrödinger-Bridge-inspired learning of drift fields and regulatory archetypes from single-cell data"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Tommy W. Terooatea"},
    {name = "David Redd"},
]
keywords = ["single-cell", "RNA velocity", "diffusion", "optimal transport", "scRNA-seq"]

# Core runtime dependencies
dependencies = [
    "torch>=2.2",
    "numpy>=1.23",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tqdm>=4.66",
    "scikit-learn>=1.3",
    "anndata>=0.10",
    "scanpy>=1.9",
    "scvelo>=0.3",
    "cellrank>=2.0",
    "pandas>=2.0",
    "h5py>=3.10",
    "numba>=0.58",
]

# ── Optional dependency groups ────────────────────────────────────────────────
[project.optional-dependencies]

# Fast approximate nearest-neighbour search for KNNVelocity
# Install: pip install "scjdo[faiss-cpu]"   (CPU-only)
#          pip install "scjdo[faiss-gpu]"   (GPU, requires CUDA)
faiss-cpu = ["faiss-cpu>=1.7"]
faiss-gpu = ["faiss-gpu>=1.7"]

# Development / CI toolchain
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.8",
    "ipykernel>=6.25",
    "jupyterlab>=4.0",
]

# Documentation
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.15",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=1.24",
    "nbsphinx>=0.9",
]

# ── Package discovery ─────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]
include = ["scjdo*"]
exclude = ["tests*", "notebooks*", "examples*"]

# ── Console scripts ───────────────────────────────────────────────────────────
[project.scripts]
scjdo          = "scjdo.cli.main:main"
scjdo-train    = "scjdo.pipeline.train_from_anndata:main"
scjdo-bridge   = "scjdo.pipeline.train_bridge:main"
scjdo-atlas    = "scjdo.atlas.build_atlas_cli:main"

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
# ── Ruff (linter) ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py39"
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",   # line too long — handled by black
    "F401",   # unused imports in __init__.py re-exports
]
exclude = ["notebooks/", "examples/", "Figures_notebook/"]

# ── Black (formatter) ────────────────────────────────────────────────────────
[tool.black]
line-length    = 100
target-version = ["py39", "py310", "py311"]
exclude = '''
/(
  notebooks
  | examples
  | Figures_notebook
)/
'''

# ── Mypy (type checker) ──────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.10"
ignore_missing_imports = true
no_strict_optional     = true
exclude                = ["notebooks/", "examples/"]
